Removed use of sun.misc protected classes
git-svn-id: http://oswokflow-repository.googlecode.com/svn/trunk@68 eac36e35-1ef6-d1b5-935b-798d758cd3c0